...
    "health.body_weight" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Body Weight"
          }
        }
      }
    },
    "health.no_weight_data" : {
      "extractionState" : "manual",
...
